--- a/package.json
+++ b/package.json
@@ -5,19 +5,17 @@
   "main": "index.js",
   "scripts": {
     "start": "node index.js"
-    
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "cors": "^2.8.5",
     "bcrypt": "^5.1.0",
+    "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.0",
     "mongoose": "^7.0.3",
-    "nodemon": "^2.0.22",
-    "passport-jwt": "^4.0.1"
+    "nodemon": "^2.0.22"
   }
 }
